2005-12-10  Ulrich Drepper  <drepper@redhat.com>

	* posix/regex_internal.h: Include <stdint.h> if available.

2005-12-06  Paolo Bonzini  <bonzini@gnu.org>

	* posix/regex_internal.h (SIZE_MAX): Provide a default definition.

2005-12-08  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_call.c (inetstr2int): Optimize.

2005-12-08  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_call.c (__nisbind_create): Remove __nisbind_destroy,
	->clnt cannot be != NULL.
	(__do_niscall): No need to use __nisbind_destroy, __nisbind_next
	did it.
	(__nisbind_connect): use_auth is already TRUE, otherwise we would
	not be here.

	* nis/nis_lookup.c (nis_lookup): Remove unnecessary
	__nisbind_destroy calls.  __nisbind_next does all that.

	* nis/ypclnt.c (yp_update): Before trying default authentication,
	free DES descriptor.

2005-12-07  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_table.c (nis_list): Fix memory handling in error case.

2005-12-07  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_table.c (nis_list): Remove have_tablepath, just use the
	pointer value itself.

2005-12-06  Ulrich Drepper  <drepper@redhat.com>

	* catgets/gencat.c: Use GPL, not LGPL.
	* elf/cache.c: Likewise.
	* elf/chroot_canon.c: Likewise.
	* elf/ldconfig.c: Likewise.
	* elf/readlib.c: Likewise.
	* iconv/dummy-repertoire.c: Likewise.
	* iconv/iconv_charmap.c: Likewise.
	* iconv/iconv_prog.c: Likewise.
	* iconv/iconvconfig.c: Likewise.
	* locale/programs/3level.h: Likewise.
	* locale/programs/charmap-dir.c: Likewise.
	* locale/programs/charmap-dir.h: Likewise.
	* locale/programs/charmap-kw.gperf: Likewise.
	* locale/programs/charmap.c: Likewise.
	* locale/programs/charmap.h: Likewise.
	* locale/programs/config.h: Likewise.
	* locale/programs/ld-address.c: Likewise.
	* locale/programs/ld-collate.c: Likewise.
	* locale/programs/ld-ctype.c: Likewise.
	* locale/programs/ld-identification.c: Likewise.
	* locale/programs/ld-measurement.c: Likewise.
	* locale/programs/ld-messages.c: Likewise.